ishop-infrastructure/k8s/ishop-authorization/ishop-authorization-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ishop-authorization
  namespace: dev
  labels:
    app: ishop-authorization
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ishop-authorization
  template:
    metadata:
      labels:
        app: ishop-authorization
    spec:
      containers:
        - name: ishop-authorization
          image: e2rabi11/ishop-authorization:1.0.4-SNAPSHOT
          ports:
          - containerPort: 8080
#          livenessProbe:
#            httpGet:
#              path: /actuator/health/liveness
#              port: 8080
#            initialDelaySeconds: 3000
#            periodSeconds: 2000
#          readinessProbe:
#            httpGet:
#              path: /actuator/health/readiness
#              port: 8080
#            initialDelaySeconds: 1500
#            periodSeconds: 10000
