ishop-infrastructure/k8s/ishop-authorization/ishop-authorization-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ishop-authorization-service
  namespace: dev
spec:
  type: NodePort
  selector:
    app: ishop-authorization
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
