ishop-infrastructure/k8s/ishop-authorization/ishop-authorization-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ishop-authorization-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: ishop-errabi.com
      http:
        paths:
          - backend:
              service:
                name: ishop-authorization-service
                port:
                  number: 8080
            path: /
            pathType: Prefix
